--- a/example.html
+++ b/example.html
@@ -31,7 +31,7 @@
     </head>
     <body>
 
-        <section class="background-wrapper" infinity-background>        
+        <section class="background-wrapper gonca-infinity-background">        
             <div class="content">                
                 <h1>Infinity Background</h1>
             </div>
